# BasicsOfProgrammingCourse

./: CMakeLists.txt  README.md  main.c
course C1/: main.c
course C1/libs/: CMakeLists.txt
course C1/libs/algorithms/: CMakeLists.txt  algorithm.h
course C1/libs/algorithms/array/: array.c  array.h
course C1/libs/data_structures/: CMakeLists.txt
course C1/libs/data_structures/UNORDERED_ARRAY_SET/: UNORDERED_ARRAY_SET.c  UNORDERED_ARRAY_SET.h
course C1/libs/data_structures/bitset/: bitset.c  bitset.h
course C1/libs/data_structures/vector/: CMakeLists.txt  vector.c  vector.h
libs/algorithms/: algorithm.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/UNORDERED_ARRAY_SET/: UNORDERED_ARRAY_SET.c  UNORDERED_ARRAY_SET.h
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/vector/: vector.c  vector.h
